--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,7 +1,7 @@
 for_window [class="^.*"] border pixel 1
 
 set $mod Mod4
-font pango:monospace 14
+font pango:JetBrainsMonoNerdFont 14
 
 exec --no-startup-id picom
 exec --no-startup-id feh --bg-scale ~/.wallpapers/active.png
