--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,6 +19,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
+set -g allow-passthrough on
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 run '~/.tmux/plugins/tpm/tpm'
 
 # set vi-mode
