--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -78,12 +78,12 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.flamingo}
+separator-foreground = ${colors.red}
 
-font-0 = MesloLGS Nerd Font Mono:size=12;6
+font-0 = JetBrains Mono Nerd Font:size=12;4
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-right = pulseaudio battery memory cpu wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -106,9 +106,8 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.mauve}
+label-active-background = ${colors.green}
 label-active-foreground = ${colors.crust}
-label-active-underline= ${colors.lauve}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -140,11 +139,12 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix = " "
+format-volume-prefix-foreground = ${colors.yellow}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
+label-volume-foreground = ${colors.green}
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
@@ -160,20 +160,6 @@ label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
 
 [module/battery]
 type = internal/battery
@@ -214,18 +200,18 @@ label-connected = %{F#F0C674}%ifname%%{F-} %essid%
 
 [module/eth]
 inherit = network-base
+ip = %local_ip%
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#F9e2af}󰈁%{F-} %{F#a6e3a1}connected%{F-}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+time = %H:%M:%S
+date = %a %d %b 
 
-label = %date%
-label-foreground = ${colors.primary}
+label = %{F#F9e2af} %{F-} %{F#a6e3a1}%time% %date%%{F-}
 
 [settings]
 screenchange-reload = true
