--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -701,7 +701,8 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="$HOME/.config/neofetch/ascii"
+#image_source="$HOME/.config/neofetch/ascii"
+image_source="auto"
 
 
 # Ascii Options
