--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,6 +12,15 @@ exec --no-startup-id xset s off -dpms
 exec_always killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 
+bindsym Print exec maim "$HOME/pictures/screenshots/$(date).png"
+bindsym $mod+Print exec maim --window $(xdotool getactivewindow) "$HOME/pictures/screenshots/$(date).png"
+bindsym Shift+Print exec maim --select "$HOME/pictures/screenshots/$(date).png"
+
+## Clipboard Screenshots
+bindsym Ctrl+Print exec maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec maim --select | xclip -selection clipboard -t image/png
+
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
