--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,8 +6,10 @@ font pango:JetBrainsMonoNerdFont 14
 exec --no-startup-id picom --no-fading-openclose
 exec --no-startup-id feh --bg-fill ~/.wallpapers/1 --bg-fill ~/.wallpapers/2 --bg-fill ~/.wallpapers/3
 exec --no-startup-id xrdb -merge ~/.Xresources
-exec_always --no-startup-id setxkbmap -option caps:escape,shift:both_capslock
+exec --no-startup-id setxkbmap -option caps:escape,shift:both_capslock
 exec --no-startup-id xset s off -dpms
+exec --no-startup-id export GTK_THEME="catppuccin-mocha-green-standard+default"
+
 
 exec_always killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
@@ -32,6 +34,13 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# Media player controls
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
+bindsym F4 exec "$HOME/.config/picom/toggle.sh"
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
