--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -222,8 +222,8 @@ backend = "xrender";
 dithered-present = false;
 
 # Enable/disable VSync.
-# vsync = false
-vsync = true;
+vsync = false
+#vsync = true;
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
@@ -257,7 +257,7 @@ detect-client-opacity = true;
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-unredir-if-possible = true
+# unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
