--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -213,8 +213,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-#backend = "glx"
-backend = "xrender";
+backend = "glx";
+#backend = "xrender";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
@@ -222,8 +222,14 @@ backend = "xrender";
 dithered-present = false;
 
 # Enable/disable VSync.
-#vsync = false
 vsync = true;
+#vsync = "opengl-swc";
+#glx-copy-from-front = true;
+#glx-swap-method = 2;
+#xrender-sync = true;
+#xrender-sync-fence = true;
+
+#opacity-rule = ["0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"];
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
