--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
